Adds meta charset

--- a/index.jade
+++ b/index.jade
@@ -12,6 +12,7 @@ mixin rating(stars, content)
 html(lang="en")
 	head
 		title Max C Miller
+		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="css/dist/main.css")
 		link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Source+Code+Pro")
