Fixes incorrect character encoding

--- a/index.jade
+++ b/index.jade
@@ -28,7 +28,7 @@ html(lang="en")
 						a.button.button--white(href="#portfolio") View my portfolio
 			.col-golden-small
 				section.intro
-					h2.intro__text Hey, I’m <span>Max Miller</span>, a <span>student</span>, <span>developer</span> and <span>web designer</span> from <span>Brisbane, Australia</span>.
+					h2.intro__text Hey, I'm <span>Max Miller</span>, a <span>student</span>, <span>developer</span> and <span>web designer</span> from <span>Brisbane, Australia</span>.
 					ul.intro__icons
 						//- Designed by Freepik
 						li.intro__icons__icon
