Adds lightbox and additional portfolio images

--- a/css/src/sections/_portfolio.sass
+++ b/css/src/sections/_portfolio.sass
@@ -43,6 +43,8 @@
 				text-align: right
 				@media(max-width: 650px)
 					text-align: center
+			a
+				display: block
 			img
 				width: 90%
 				box-shadow: 0 0 20px rgba(0,0,0,0.8)
