--- a/css/src/sections/_skills.sass
+++ b/css/src/sections/_skills.sass
@@ -14,6 +14,8 @@
 			padding-right: 10px
 			float: right
 			&__star
+				display: block
+				float: left
 				svg
 					width: 24px
 					height: 24px
