--- a/css/src/_base.sass
+++ b/css/src/_base.sass
@@ -7,6 +7,7 @@ html, body
 	letter-spacing: -1px
 	-webkit-font-smoothing: antialiased
 	line-height: 1.4
+	background-color: white
 
 h2
 	font-weight: normal
