--- a/css/src/_base.sass
+++ b/css/src/_base.sass
@@ -17,15 +17,27 @@ h2
 
 h3
 	font-weight: normal
-	font-size: 1.5em
+	font-size: 1.4em
 	color: #888
 	margin: 0.8em 0
+	@media(max-width: 650px)
+		font-size: 1.2em
+		margin: 0.4em 0
 
-p
+p, p + ul li
 	font-size: 1.1em
 	line-height: 1.6
+	font-family: Georgia, "Palatino Linotype", serif
+	-webkit-font-smoothing: auto
+	color: #353535
+	letter-spacing: 0
 	@media(max-width: 650px)
-		font-size: 0.8em
+		font-size: 0.9em
+
+p a
+	color: #888
+	text-decoration: none
+	border-bottom: 1px solid #888
 
 *
 	box-sizing: border-box
