--- a/css/src/sections/_skills.sass
+++ b/css/src/sections/_skills.sass
@@ -22,3 +22,5 @@
 		li
 			font-size: 1.2em
 			padding: 10px 0
+			font-family: "Source Code Pro", monospace
+			-webkit-font-smoothing: antialiased
