Removes resume link (for now)

--- a/index.jade
+++ b/index.jade
@@ -73,8 +73,8 @@ html(lang="en")
 						+rating(4, 'Java')
 			.col-golden-large.skills__background
 		section.cta
-			a.button.pull-right(href="#") Download resume
-			a.button.button--primary(href="#") Get in touch
+			a.button.pull-right(href="http://github.com/einkelflugle") My GitHub
+			a.button.button--primary(href="mailto:maxcharlesmiller@icloud.com") Get in touch
 		section.portfolio#portfolio
 			.row.portfolio__item
 				.col-6.portfolio__item__description
