--- a/favicons/favicons.jade
+++ b/favicons/favicons.jade
@@ -1,3 +1,4 @@
+link(rel="mask-icon", href="/favicons/code.svg", color="#FFFFFF")
 link(rel="apple-touch-icon", sizes="57x57", href="/favicons/apple-touch-icon-57x57.png?v=2")
 link(rel="apple-touch-icon", sizes="60x60", href="/favicons/apple-touch-icon-60x60.png?v=2")
 link(rel="apple-touch-icon", sizes="72x72", href="/favicons/apple-touch-icon-72x72.png?v=2")
@@ -13,3 +14,7 @@ link(rel="icon", type="image/png", href="/favicons/favicon-96x96.png?v=2", sizes
 link(rel="icon", type="image/png", href="/favicons/favicon-16x16.png?v=2", sizes="16x16")
 link(rel="manifest", href="/favicons/manifest.json?v=2")
 link(rel="shortcut icon", href="/favicons/favicon.ico?v=2")
+meta(name="msapplication-TileColor", content="#d6b3a0")
+meta(name="msapplication-TileImage", content="/favicons/mstile-144x144.png?v=2")
+meta(name="msapplication-config", content="/favicons/browserconfig.xml?v=2")
+meta(name="theme-color", content="#ffffff")
