--- a/favicons/favicons.jade
+++ b/favicons/favicons.jade
@@ -1,4 +1,4 @@
-link(rel="mask-icon", href="/favicons/code.svg", color="#FFFFFF")
+link(rel="mask-icon", href="/favicons/code.svg", color="#FFFFFF", fill="#FFFFFF")
 link(rel="apple-touch-icon", sizes="57x57", href="/favicons/apple-touch-icon-57x57.png?v=2")
 link(rel="apple-touch-icon", sizes="60x60", href="/favicons/apple-touch-icon-60x60.png?v=2")
 link(rel="apple-touch-icon", sizes="72x72", href="/favicons/apple-touch-icon-72x72.png?v=2")
