Fixes typo in Atomic Rush portfolio item

--- a/index.jade
+++ b/index.jade
@@ -112,7 +112,7 @@ html(lang="en")
 				.col-6.portfolio__item__description
 					h2 Atomic Rush F1
 					h3 Front-end development and marketing
-					p Atomic Rush was school team in the <a href="http://rea.org.au/f1-in-schools/">F1 in Schools</a> Technology Challenge. As Marketing Advisor, my role involved presenting our team's image to potential sponsors and the general public.
+					p Atomic Rush was a school team participating in the <a href="http://rea.org.au/f1-in-schools/">F1 in Schools</a> Technology Challenge. As Marketing Advisor, my role involved presenting our team's image to potential sponsors and the general public.
 					p A major part of my role was developing, promoting and maintaining our website. The site allowed users to view information about the team, our sponsors, and upcoming events, as well as contact our team via email or Facebook.
 					span.portfolio__item__description__date September 2013 - March 2014
 				.col-6.portfolio__item__image
