--- a/index.jade
+++ b/index.jade
@@ -48,7 +48,7 @@ html(lang="en")
 								svg
 									use(xlink:href="#icon-twitter")
 						li.intro__icons__icon
-							a(href="mailto:maxcharlesmiller@icloud.com")
+							a(href="mailto:me@maxcmiller.com")
 								svg
 									use(xlink:href="#icon-email")
 		.row.about
@@ -75,7 +75,7 @@ html(lang="en")
 			.col-golden-large.skills__background
 		section.cta
 			a.button.pull-right(href="http://github.com/einkelflugle") My GitHub
-			a.button.button--primary(href="mailto:maxcharlesmiller@icloud.com") Get in touch
+			a.button.button--primary(href="mailto:me@maxcmiller.com") Get in touch
 		section.portfolio#portfolio
 			.row.portfolio__item
 				.col-6.portfolio__item__description
@@ -119,7 +119,7 @@ html(lang="en")
 					a(href="img/atomicrushf1.jpg", data-lightbox="atomicrushf1", data-title="Home page of the Atomic Rush F1 website.")
 						img(src="img/atomicrushf1.jpg", alt="Atomic Rush F1")
 		section.footer
-			a.button.button--white(href="mailto:maxcharlesmiller@icloud.com") Get in touch
+			a.button.button--white(href="mailto:me@maxcmiller.com") Get in touch
 			div.footer__bottom
 				a(href="#top").footer__bottom__logo
 					svg
