Adds button group component for selecting versions of Metalithic site

--- a/css/src/main.sass
+++ b/css/src/main.sass
@@ -10,6 +10,7 @@
 @import 'sections/footer'
 
 @import 'components/button'
+@import 'components/button-group'
 
 @import 'animate'
 @import 'lightbox'
