Converts build process to Gulp; deployment assets now in one folder

--- a/src/css/sections/_skills.sass
+++ b/src/css/sections/_skills.sass
@@ -3,7 +3,7 @@
 		& > div
 			width: 100%
 	&__background
-		background-image: url(../../img/keyboard.jpg)
+		background-image: url(/img/keyboard.jpg)
 		background-size: cover
 		background-repeat: no-repeat
 		background-position: left
