--- a/src/css/sections/_hero.sass
+++ b/src/css/sections/_hero.sass
@@ -1,6 +1,6 @@
 .hero
 	height: 80vh
-	background-image: url(../../img/bg.jpg)
+	background-image: url(/img/bg.jpg)
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: center
