--- a/src/css/_fonts.scss
+++ b/src/css/_fonts.scss
@@ -4,6 +4,7 @@
     font-family: 'Source Code Pro';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: url('/fonts/source-code-pro-v8-latin-regular.eot'); /* IE9 Compat Modes */
     src: local('Source Code Pro'), local('SourceCodePro-Regular'),
         url('/fonts/source-code-pro-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
