Adds fallback background-colors to background images for better loading appearance

--- a/src/css/sections/_hero.sass
+++ b/src/css/sections/_hero.sass
@@ -1,6 +1,6 @@
 .hero
 	height: 80vh
-	background-image: url(/img/bg.jpg)
+	background: url(/img/bg.jpg), $cloud-bg-color
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: center
