--- a/src/css/sections/_skills.sass
+++ b/src/css/sections/_skills.sass
@@ -3,7 +3,7 @@
 		& > div
 			width: 100%
 	&__background
-		background-image: url(/img/keyboard.jpg)
+		background: url(/img/keyboard.jpg), rgb(220, 203, 179)
 		background-size: cover
 		background-repeat: no-repeat
 		background-position: left
