--- a/src/css/sections/_footer.sass
+++ b/src/css/sections/_footer.sass
@@ -1,5 +1,5 @@
 .footer
-	background-image: url(/img/bg.jpg)
+	background: url(/img/bg.jpg), $cloud-bg-color
 	background-repeat: no-repeat
 	background-size: cover
 	background-position: center
