Updates github name

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -34,7 +34,7 @@ html(lang="en")
           ul.intro__icons
             //- Designed by Freepik
             li.intro__icons__icon
-              a(href="http://github.com/einkelflugle")
+              a(href="https://github.com/maxcmiller")
                 svg
                   use(xlink:href="#icon-github")
             li.intro__icons__icon
@@ -50,7 +50,7 @@ html(lang="en")
         .text
           h2 About me
           p My name is Max Miller, and I enjoy building websites. I specialise in creating unique experiences that look great and function beautifully across all devices.
-          p I also love to code. Most of my projects are on <a href="http://github.com/einkelflugle">GitHub</a> if you'd like to check them out. <i>Warning: projects are in varying stages of completeness!</i>
+          p I also love to code. Most of my projects are on <a href="http://github.com/maxcmiller">GitHub</a> if you'd like to check them out. <i>Warning: projects are in varying stages of completeness!</i>
       .col-golden-small
         .row
           .col-6
@@ -68,7 +68,7 @@ html(lang="en")
             +rating(4, 'Java')
       .col-golden-large.skills__background
     section.cta
-      a.button.pull-right(href="http://github.com/einkelflugle") My GitHub
+      a.button.pull-right(href="http://github.com/maxcmiller") My GitHub
       a.button.button--primary(href="mailto:me@maxcmiller.com") Get in touch
     section.portfolio#portfolio
       .row.portfolio__item
@@ -107,7 +107,7 @@ html(lang="en")
             li Submit comments
           p The application is built on <a href="http://rubyonrails.org">Ruby on Rails</a>, with a <a href="http://www.postgresql.org">PostgreSQL</a> database. I used <a href="http://heroku.com">heroku</a> for deployment, and the entire application and related assets are managed with <a href="http://git-scm.com">Git</a> version control.
           span.portfolio__item__description__date August - September 2014
-          a.button.button--primary(href="http://github.com/einkelflugle/craftoid") View GitHub repository
+          a.button.button--primary(href="http://github.com/maxcmiller/craftoid") View GitHub repository
       .row.portfolio__item
         .col-6.portfolio__item__description
           h2 Atomic Rush F1
